kubernetes-in-one-shot/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        resources:       #It sets limit for cpu and memory usage
          requests:       #Otherwise only 1 pod will take up  the entire memory and other pods will fail
            cpu: 100m     #Minimum required 
            memory: 128Mi
          limits:
            cpu: 200m     #Max required
            memory: 256Mi
        volumeMounts:
        - name: my-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: my-volume
        persistentVolumeClaim:
          claimName: local-pvc
