kubernetes-in-one-shot/nginx/service.yml
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
  namespace: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80     #outer world
      targetPort: 80   #pods port
  type: ClusterIP
